--- a/src/styles/CartTotal.scss
+++ b/src/styles/CartTotal.scss
@@ -1,20 +1,66 @@
 .cart-total {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    div {
-      margin: 10px 0;
-    }
-  
-    button {
-      margin-top: 20px;
-      background: linear-gradient(90deg, #8e2de2, #4a00e0);
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 20px;
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+
+    td {
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+      text-align: left;
+
+      &:first-child {
+        font-weight: bold;
+      }
+
+      &:last-child {
+        text-align: right;
+      }
     }
   }
+
   
+}
+
+  .cart-list-total {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    gap: 10px;
+    margin-bottom: 20px;
+
+    h2 {
+      margin: 0;
+      font-size: 24px;
+      display: flex;
+  justify-content: flex-start;
+  font-family: 'Bubblegum Sans', cursive;     
+  font-size: 2rem; 
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5); 
+  color:blue;
+    }
+  }
+
+  button {
+    width:100%;
+    margin-left: 10px;
+    margin-top:10px;
+    padding: 10px 20px;
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 25px;
+    transition: background 0.3s ease, transform 0.3s ease;
+
+    &:hover {
+      background: radial-gradient(circle, rgba(252,70,107,1) 0%, rgba(63,94,251,1) 100%);
+      transform: scale(1.05);
+    }
+  }
