--- a/src/styles/CartTotal.scss
+++ b/src/styles/CartTotal.scss
@@ -3,6 +3,7 @@
   max-width: 400px;
   margin: 0 auto;
   margin-top: 20px;
+  position: relative;
 
   table {
     width: 100%;
@@ -22,45 +23,57 @@
       }
     }
   }
+}
+.cart-img {
+  position: absolute;
+  left: -100px;
+  top: -48px;
+}
+img {
+  width: 100px;
+}
+.cart-list-total {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
 
-  
+  h2 {
+    margin: 0;
+    font-size: 24px;
+    display: flex;
+    justify-content: flex-start;
+    font-family: "Bubblegum Sans", cursive;
+    font-size: 2rem;
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    color: blue;
+  }
 }
 
-  .cart-list-total {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+button {
+  width: 100%;
+  margin-left: 10px;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 25px;
+  transition: background 0.3s ease, transform 0.3s ease;
 
-    gap: 10px;
-    margin-bottom: 20px;
-
-    h2 {
-      margin: 0;
-      font-size: 24px;
-      display: flex;
-  justify-content: flex-start;
-  font-family: 'Bubblegum Sans', cursive;     
-  font-size: 2rem; 
-  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5); 
-  color:blue;
-    }
+  &:hover {
+    background: radial-gradient(
+      circle,
+      rgba(252, 70, 107, 1) 0%,
+      rgba(63, 94, 251, 1) 100%
+    );
+    transform: scale(1.05);
   }
-
-  button {
-    width:100%;
-    margin-left: 10px;
-    margin-top:10px;
-    padding: 10px 20px;
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 25px;
-    transition: background 0.3s ease, transform 0.3s ease;
-
-    &:hover {
-      background: radial-gradient(circle, rgba(252,70,107,1) 0%, rgba(63,94,251,1) 100%);
-      transform: scale(1.05);
-    }
-  }
+}
