--- a/src/styles/DiscountCoupon.scss
+++ b/src/styles/DiscountCoupon.scss
@@ -28,7 +28,7 @@
   button {
     margin-left: 10px;
     padding: 10px 20px;
-    background: grey;
+    background: blue;
     color: white;
     border: none;
     cursor: pointer;
